--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.8",
         "php": ">=5.3.3",
         "guzzle/guzzle": "~3.8",
         "symfony/event-dispatcher": "~2.3",
